2.70 RC1 Actuator editObject.replaseMesh replaced only mesh, and not replaced material. #39053

Closed
opened 2014-03-08 19:48:52 +01:00 by Tort · 20 comments

System Information
Ubuntu 12.04, NVIDIA GTS-250

Blender Version
Broken: (2.70 RC1)
Worked: (2.69)

Exact steps for others to reproduce the error
2.70 RC1 Actuator editObject.replaseMesh replaced only mesh, and not replaced material.

**System Information** Ubuntu 12.04, NVIDIA GTS-250 **Blender Version** Broken: (2.70 RC1) Worked: (2.69) **Exact steps for others to reproduce the error** 2.70 RC1 Actuator editObject.replaseMesh replaced only mesh, and not replaced material.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Tort

Added subscriber: @Tort

#40376 was marked as duplicate of this issue

#40376 was marked as duplicate of this issue

#39402 was marked as duplicate of this issue

#39402 was marked as duplicate of this issue
Author
[Bug_2.69_shadow_plane_bound_box.blend](https://archive.blender.org/developer/F81664/Bug_2.69_shadow_plane_bound_box.blend)
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I confirm the bug. It is a regression as in 2.69/2.68 it worked and in 2.70 it doesn't work.
Anyway I have uploaded a better example showing the bug. The sphere should be red but in 2.70 is grey.

test_replacemesh.blend

I confirm the bug. It is a regression as in 2.69/2.68 it worked and in 2.70 it doesn't work. Anyway I have uploaded a better example showing the bug. The sphere should be red but in 2.70 is grey. [test_replacemesh.blend](https://archive.blender.org/developer/F82346/test_replacemesh.blend)
Author

Sorry. Not the file is uploaded
Bug_2.7RC1_replace_mesh_actuator.blend

Sorry. Not the file is uploaded [Bug_2.7RC1_replace_mesh_actuator.blend](https://archive.blender.org/developer/F82354/Bug_2.7RC1_replace_mesh_actuator.blend)

Added subscribers: @remnar, @gwentiv, @ihoran777

Added subscribers: @remnar, @gwentiv, @ihoran777

◀ Merged tasks: #39402.

◀ Merged tasks: #39402.
Member

Added subscriber: @brita

Added subscriber: @brita
Member

Confirmed in linux 64bit, b6e967b
The material preview is also not updating. Properties window, see material, change mesh, see material again.

Confirmed in linux 64bit, b6e967b The material preview is also not updating. Properties window, see material, change mesh, see material again.

Added subscriber: @LewisVeasey

Added subscriber: @LewisVeasey

I've tested this in Windows 7. It appears to have the same problem. My only guess it's the same for mac users as well.

I've tested this in Windows 7. It appears to have the same problem. My only guess it's the same for mac users as well.

Added subscribers: @mont29, @raco

Added subscribers: @mont29, @raco

◀ Merged tasks: #40376.

◀ Merged tasks: #40376.

Thanks for merging Moguri. :)

Thanks for merging Moguri. :)

This issue was referenced by 6c9dd174a8

This issue was referenced by 6c9dd174a8bc2cd9a857c96f3ddfdb398aa6f88c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6c9dd174a8.

Closed by commit 6c9dd174a8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39053
No description provided.